# CGNSReader

./: .gitignore  CMakeLists.txt  README.md
3thparty/Win/CGNS/include/: cgnsBuild.defs  cgnsconfig.h  cgnstypes.h  cgnstypes_f.h  cgnstypes_f03.h
3thparty/Win/CGNS/lib/cmake/cgns/: cgns-targets-debug.cmake  cgns-targets.cmake
3thparty/Win/HDF5/cmake/hdf5/: hdf5-config-version.cmake  hdf5-config.cmake  hdf5-targets-release.cmake  hdf5-targets.cmake
3thparty/Win/HDF5/include/: H5pubconf.h
3thparty/Win/HDF5/lib/: libhdf5.settings
3thparty/Win/HDF5/lib/pkgconfig/: hdf5-1.12.0.pc  hdf5_hl-1.12.0.pc
3thparty/Win/SZIP/cmake/szip/: szip-targets-debug.cmake  szip-targets-release.cmake  szip-targets.cmake
3thparty/Win/ZLIB/cmake/zlib/: zlib-targets-debug.cmake  zlib-targets-release.cmake  zlib-targets.cmake
src/: CGNSReader.h  CMakeLists.txt
test/: CMakeLists.txt
