cmake_minimum_required(VERSION 3.19)

project(CGNSReader LANGUAGES C CXX)

set(GLOBAL OUTPUT_DIR ${PROJECT_SOURCE_DIR}/output)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})

set(RELAY_DLL)
if(WIN32)
	set(THIRDPARTY_DIR ${PROJECT_SOURCE_DIR}/3thparty/Win)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/CGNS/bin/cgnsdll.dll)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/HDF5/bin/hdf5.dll)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/SZIP/bin/szip.dll)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/ZLIB/bin/zlib.dll)
else(WIN32)
	set(THIRDPARTY_DIR ${PROJECT_SOURCE_DIR}/3thparty/Linux)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/CGNS/bin/cgnsdll.so)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/HDF5/bin/hdf5.so)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/SZIP/bin/szip.so)
	list(APPEND RELAY_DLL ${THIRDPARTY_DIR}/ZLIB/bin/zlib.so)
endif(WIN32)

if(EXISTS RELAY_DLL)
	message(STATUS "CGNSReader relay lib is exist!")
else(EXISTS RELAY_DLL)
	message(STATUS )
endif(EXISTS RELAY_DLL)

add_subdirectory(src)